--- a/ppij_web_aplikacija/Views/Shared/_Layout.cshtml
+++ b/ppij_web_aplikacija/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                                             }
                                         },
                                         complete: function () {
-                                            setTimeout(worker, 5000);
+                                            setTimeout(nots, 5000);
                                         }
                                     });
                                 };
